tests/ui/from_over_into_unfixable.stderr
error[E0658]: `impl Trait` in type aliases is unstable
  --> $DIR/from_over_into_unfixable.rs:35:15
   |
LL | type Opaque = impl Sized;
   |               ^^^^^^^^^^
   |
   = note: see issue #63063 <https://github.com/rust-lang/rust/issues/63063> for more information
   = help: add `#![feature(type_alias_impl_trait)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
